--- a/package.json
+++ b/package.json
@@ -4,19 +4,28 @@
   "description": "",
   "main": "mjml2json.js",
   "scripts": {
-    "test": "babel-node json2mjml.js ./tests/styleguide.json ./tests/styleguide.mjml"
+    "build": "babel src -d lib",
+    "lint": "eslint src test",
+    "prettier": "prettier --write \"{src,test}/**/*.js\""
   },
   "keywords": [],
   "author": "Nicolas Garnier",
   "license": "MIT",
   "dependencies": {
+    "commander": "^2.11.0",
     "htmlparser2": "^3.9.2",
-    "mjml": "^3.3.5",
-    "lodash": "^4.17.2"
+    "lodash": "^4.17.2",
+    "mjml": "^3.3.5"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1"
+    "babel-preset-stage-3": "^6.24.1",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-plugin-import": "^2.8.0",
+    "prettier": "^1.7.4"
   }
 }
