--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json2mjml",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A package to convert a MJML template from JSON to XML",
   "main": "lib/json2mjml.js",
   "bin": {
@@ -15,10 +15,7 @@
   "license": "MIT",
   "author": "Nicolas Garnier",
   "dependencies": {
-    "commander": "^2.11.0",
-    "htmlparser2": "^3.9.2",
-    "lodash": "^4.17.2",
-    "mjml": "^3.3.5"
+    "commander": "^2.11.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
